# tdd-python-practice

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/bowling/: score_calculator.py
tests/bowling/: test_score_calculator.py
